// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contain hidden class when menu is not open 1`] = `
<div
  class="max-h-0 w-full overflow-hidden items-start flex flex-col text-gray-400 transition-all duration-500 ease-in-out lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto lg:items-center lg:h-auto text-gray-400"
  data-testid="menu"
>
  <a
    class="w-full px-3 py-2 rounded mr-2 hover:bg-gray-900 hover:text-white"
    href="/props"
  >
    <span>
      Props
    </span>
  </a>
  <a
    class="w-full px-3 py-2 rounded mr-2 hover:bg-gray-900 hover:text-white"
    href="/context"
  >
    <span>
      Context
    </span>
  </a>
  <a
    class="w-full px-3 py-2 rounded mr-2 hover:bg-gray-900 hover:text-white"
    href="/redux"
  >
    <span>
      Redux
    </span>
  </a>
</div>
`;

exports[`not contain hidden class when menu is open 1`] = `
<div
  class="max-h-200 w-full overflow-hidden items-start flex flex-col text-gray-400 transition-all duration-500 ease-in-out lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto lg:items-center lg:h-auto text-gray-400"
  data-testid="menu"
>
  <a
    class="w-full px-3 py-2 rounded mr-2 hover:bg-gray-900 hover:text-white"
    href="/props"
  >
    <span>
      Props
    </span>
  </a>
  <a
    class="w-full px-3 py-2 rounded mr-2 hover:bg-gray-900 hover:text-white"
    href="/context"
  >
    <span>
      Context
    </span>
  </a>
  <a
    class="w-full px-3 py-2 rounded mr-2 hover:bg-gray-900 hover:text-white"
    href="/redux"
  >
    <span>
      Redux
    </span>
  </a>
</div>
`;
